--- a/css/styles9.css
+++ b/css/styles9.css
@@ -2,6 +2,11 @@
     body {
     background-color: black;
     color: white;
+    }
 }
+@media screen and (min-width: 768px) {
+  body {
+    background-color: yellowgreen;
+  }    
 
 }
