--- a/css/styles9.css
+++ b/css/styles9.css
@@ -7,6 +7,10 @@
 @media screen and (min-width: 768px) {
   body {
     background-color: yellowgreen;
-  }    
-
+  }
+  .column {
+    width: 220px;
+    float: left;
+    padding: 15px;
+  }
 }
